--- a/src/App.scss
+++ b/src/App.scss
@@ -26,3 +26,48 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.modal-inner-container{
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.modal-title{
+  font-size: 4vh;
+  position: absolute;
+  top: 15%;
+  left: 10%;
+  color: aliceblue;
+}
+
+.modal-close-btn{
+  font-size: 4vh;
+  position: absolute;
+  bottom: 5%;
+  left: 10%;
+}
+
+.modal-overlay{
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.75);
+}
+
+.modal-content{
+  position: absolute;
+  top: 25%;
+  left: 25%;
+  right: 25%;
+  bottom: 25%;
+  background: #fff;
+  overflow: auto;
+  outline: none;
+  padding: 2%;
+  background: center no-repeat url("assets/poppening_art.png");
+  background-size: contain;
+
+}
