updated background image link

--- a/src/components/mapObject/Map.scss
+++ b/src/components/mapObject/Map.scss
@@ -7,7 +7,7 @@
   height: 3460px;
   position: relative;
   display: flex;
-  @include backgroundImage("http://hydra-media.cursecdn.com/bannersaga.gamepedia.com/d/d9/World-Map.jpg?version=76423fd143ce1ea8a1ebb3c885b06fbb");
+  @include backgroundImage("https://i.imgur.com/dDlClEp.jpg");
 }
 
 @mixin wordanMixin(){
