added till blotsbalkr

--- a/src/App.scss
+++ b/src/App.scss
@@ -64,7 +64,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(255, 255, 255, 0.75);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .modal-content{
@@ -73,7 +73,7 @@
   left: 25%;
   right: 25%;
   bottom: 25%;
-  background: #343635;
+  background: rgba(0, 0, 0, 0.7);
   overflow: auto;
   outline: none;
   padding: 2%;
