added locations till Burra Pass

--- a/src/App.scss
+++ b/src/App.scss
@@ -37,7 +37,7 @@
   position: absolute;
   top: 10%;
   left: 10%;
-  color: #908d81;
+  color: #C93214;
 }
 .modal-text{
   font-size: 2.5vh;
@@ -49,12 +49,12 @@
 }
 
 .modal-close-btn{
-  font-size: 3vh;
+  font-size: 2vh;
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 2%;
+  right: 2%;
   cursor: pointer;
-  color: #908d81;
+  color: #C93214;
 }
 
 .modal-overlay{
@@ -73,10 +73,10 @@
   left: 25%;
   right: 25%;
   bottom: 25%;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.604);
+  background-clip: padding-box;
   overflow: auto;
   outline: none;
-  padding: 2%;
-  //background: center no-repeat url("assets/poppening_art.png");
-  background-size: contain;
+  border: 20px solid transparent;
+  border-image: url("assets/poppening_art.png") 20 round ;
 }
